# 09_trotterization

./: .gitignore  pyproject.toml  second_order_trotter_dynamics.ipynb
trotterization/: utils.py
