[project]
name = "trotterization"
version = "0.1.0"
description = ""
authors = [
    {name = "yforest-osaka",email = "mori.yusei@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "qulacsvis (>=0.7.3,<0.8.0)",
    "qulacs (>=0.6.11,<0.7.0)",
    "qiskit (>=1.3.1,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
